--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# Ensure PDF files are left as binary.  To roughtly display changes in them
+# Ensure PDF files are left as binary.  To roughly display changes in them
 # by converting to text, add to your configuration (perhaps with --global):
 #
 #	git config diff.pdf.textconv pdftotext-filter
