Add PDF generation instructions
Distilled from the notes in 02df1e2e05f6ec140a15bd076384479b56cbb820.
Further background in 2a802cda6da00de1fff312051c01c562fc9983c5.

When source and PDFs were in separate branches, separate source and PDF
commits were obviously unavoidable but PDF wrangling when switching
branches was tedious.  A single branch provides the converse, and in
any case now that we have the htsget specification written in Markdown
we are fairly much forced to have source and PDF in the same branch.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >
 baseurl: "/hts-specs"
 url: "http://samtools.github.io"
 github_username: samtools
-exclude: ["*.tex", img, new, Makefile, README.md]
+exclude: ["*.tex", img, new, Makefile, MAINTAINERS.md, README.md]
 
 # Build settings
 markdown: kramdown
