Make .ver information more precise
Rather than simply HEAD, for each PDF use the most recent commit
contributing to any of that PDF's source files. Add "-dirty" only
if the particular PDF's source files are dirty.

Use committer date (%cD) rather than author date (%aD) to better
reflect when rebased or otherwise amended work appears on master.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >
 baseurl: "/hts-specs"
 url: "http://samtools.github.io"
 github_username: samtools
-exclude: ["*.tex", img, new, Makefile, MAINTAINERS.md, README.md]
+exclude: ["*.sh", "*.tex", img, new, Makefile, MAINTAINERS.md, README.md]
 
 # Build settings
 markdown: kramdown
