--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >
 baseurl: "/hts-specs"
 url: "http://samtools.github.io"
 github_username: samtools
-exclude: ["*.sh", "*.tex", img, new, Makefile, MAINTAINERS.md, README.md, scripts]
+exclude: ["*.tex", img, MAINTAINERS.md, Makefile, new, README.md, scripts]
 
 # Build settings
 markdown: kramdown
