--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,13 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: htsspecs/circle-ci-image:0.7
-    steps:
-      - checkout
-      - run:
-          name: Compile the LaTeX
-          command: |
-              make
-              mkdir pdfs
-              cp new/*.pdf pdfs
-              mkdir logs
-              cp new/*.log logs
-
-      - run:
-          name: Compile the diff LaTeX files
-          command: |
-              mergebase=$(git merge-base HEAD origin/master)
-              echo $mergebase
-
-              mkdir -p diff
-              make --touch diffs
-
-              # Avoid timing issues
-              sleep 2
-
-              touch $(git diff-tree --name-only $mergebase HEAD) || true
-
-              # Rebuild the actually changed PDFs, and remove the merely touched ones
-              make OLD=$mergebase NEW=HEAD diffs
-              find diff -mindepth 1 -empty -delete
-
-      - run:
-          name: Post PDFs to Github PR
-          command: |
-              .circleci/pdf_comment.js
-      - store_artifacts:
-          path: pdfs
-      - store_artifacts:
-          path: logs
-      - store_artifacts:
-          path: diff
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
