--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.aux
 *.bbl
 *.blg
+*.fdb_latexmk
+*.fls
 *.log
 *.out
 *.toc
@@ -9,7 +11,11 @@
 *.dvi
 *.ps
 
+# Ignored as it is a useful place for locally overriding Make variables
 GNUmakefile
+
+# Ignored for the convenience of Emacs/AUCTeX users (cf TeX-auto-local)
+/auto/
 
 /diff/*.idx
 /diff/*.pdf
