--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: >
   developers: htslib C&nbsp;API, htsjdk Java API, file format specifications,
   and samtools/bcftools source code.
 baseurl: "/hts-specs"
-url: "http://samtools.github.io"
 github_username: samtools
 exclude: ["*.tex", diff, img, MAINTAINERS.md, Makefile, new, README.md, scripts, test]
+plugins: [jekyll-redirect-from]
 
 # Build settings
 markdown: kramdown
